The foundations of the project have been established